前端美化+功能优化

--- a/nginx.cfg
+++ b/nginx.cfg
@@ -1,10 +1,17 @@
-# 这是针对本项目的一份最小的Nginx配置文件
-server {
-	listen 80 default_server; # 监听80端口
-	listen [::]:80 default_server;
+worker_processes  1;  # 你可以根据需要调整 worker 进程数
 
-	location / {
-		proxy_pass http://127.0.0.1:5000;
-		# 使用socket协议的情况下，将上一行改为 "uwsgi_pass 127.0.0.1:5000;"
-	}
+events {
+    worker_connections 1024;  # 你可以根据需要调整最大连接数
+}
+
+http {
+    # 在此处继续其他配置
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+
+        location / {
+            proxy_pass http://127.0.0.1:5000;
+        }
+    }
 }
